@@ -21,6 +21,7 @@ Bug fixes
  - [web] fixed renaming a folder under iOS
  - [web] fixed download of exported folders under iOS
  - [web] improved server-side CSS sanitizer
+ - [web] match recipient address when replying (#4495)
  - [eas] improved alarms syncing with EAS devices (#4351)
  - [eas] avoid potential cache update when breaking sync queries (#4422)
  - [eas] fixed EAS search
